--- a/KOLOR_WEBSITE.html
+++ b/KOLOR_WEBSITE.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>kolor</title>
-        <link rel="icon" type="image/x-icon" href="C:\Users\Admin\Desktop\My project website\favicon_io kolor\favicon.ico">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
