--- a/GAME.html
+++ b/GAME.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/x-icon" href="C:\Users\Admin\Desktop\My project website\favicon_io kolor\favicon.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <title>WIP Minigame</title>
     
