--- a/SHOPM.html
+++ b/SHOPM.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>kolor SHOP - Men</title>
-        <link rel="icon" type="image/x-icon" href="C:\Users\Admin\Desktop\My project website\favicon_io kolor\favicon.ico">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -233,7 +233,7 @@
 
         <div id="page-container" style="width:100%;min-height:100%;">
             <!-- banner or header -->
-            <img src="C:\Users\Admin\Downloads\shop_kolorvisual (1) (1)_LE_auto_x2.jpg" id="banner">
+            <img src="shop_kolorvisual.jpg" id="banner">
 
             <!-- catagories -->
             <h2 class="col3" align="center">what type of clothing do you seek?&nbsp;&nbsp;&nbsp;&nbsp;<input placeholder="search" style="border-radius:10px;height:25px;" id="search-input"></h2>
