--- a/CONTACT.html
+++ b/CONTACT.html
@@ -23,7 +23,7 @@
 
     </head>
     <body style="background-color:#faf0e6;">
-    <i class="material-icons" style="font-size:48px;cursor:pointer;"><a href="KOLOR_WEBSITE.html" style="text-decoration:none;color:black;">arrow_back</a></i>
+    <i class="material-icons" style="font-size:48px;cursor:pointer;"><a href="index.html" style="text-decoration:none;color:black;">arrow_back</a></i>
 
     <div style="width:70%;margin:0 auto;padding:50px;box-shadow:20px 20px 50px 10px #65211e;background-color:#c9ab82;height:500px;outline:5px solid beige;" align="center">
 
