--- a/GAME.html
+++ b/GAME.html
@@ -52,7 +52,7 @@
 </head>
 <body>
     <div id="header">
-        <h2><a href="KOLOR_WEBSITE.html">kolor</a></h2>
+        <h2><a href="index.html">kolor</a></h2>
     </div>
 
     <iframe src="https://scratch.mit.edu/projects/110512863/embed" allowtransparency="true" width="970" height="804" frameborder="0" scrolling="no" allowfullscreen></iframe>
