--- a/SHOPW.html
+++ b/SHOPW.html
@@ -211,7 +211,7 @@
     </head>
     <body style="margin:0px;padding:0px;width:100%;">
         <div id="header">
-            <h2><a href="KOLOR_WEBSITE.html">kolor</a></h2> 
+            <h2><a href="index.html">kolor</a></h2> 
             <i style='font-size:24px;color:#c9ab82;' class='fas' align="right" onclick="cartshow();">&#xf07a;</i>
         </div>
 
@@ -221,7 +221,7 @@
 
         <div id="page-container" style="width:100%;min-height:100%;">
             <!-- banner or header -->
-            <img src="shop_kolorvisual.jpg" id="banner">
+            <img src="bannershop.jpg" id="banner">
 
             <!-- catagories -->
             <h2 class="col3" align="center">what type of clothing do you seek?&nbsp;&nbsp;&nbsp;&nbsp;<input placeholder="search" style="border-radius:10px;height:25px;" id="search-input"></h2>
