--- a/GAME.html
+++ b/GAME.html
@@ -6,7 +6,7 @@
 
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-    <title>WIP Minigame</title>
+    <title>Minigame</title>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
