--- a/ABOUT.html
+++ b/ABOUT.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="C:\Users\Admin\Desktop\My project website\favicon_io kolor\favicon.ico">
     <style>
         body {
             font-family: 'Noto Serif', serif;
@@ -76,6 +76,9 @@
         .col4 { 
             color: #c9ab82; 
         }
+        .col5 { 
+            color: #4e934f; 
+        }
         .learn-more {
             display: inline-block;
             margin-top: 20px;
@@ -117,7 +120,7 @@
 </head>
 <body>
     <div id="header">
-        <h2><a href="index.html">kolor</a></h2>
+        <h2><a href="KOLOR_WEBSITE.html">kolor</a></h2>
     </div>
 
     <div class="content">
@@ -143,6 +146,12 @@
         <div id="section4" class="section">
             <h2 class="col4">Global Recognition and Expansion</h2>
             <p>Since its inception, Kolor has gained international acclaim for its innovative designs and quality craftsmanship. The brand has expanded its presence globally, showcasing collections at Paris Fashion Week and establishing a loyal following among fashion enthusiasts.</p>
+            <a href="#section5" class="learn-more">Learn more</a>
+        </div>
+
+        <div id="section5" class="section">
+            <h2 class="col5">Why Choose Us?</h2>
+            <p>At Kolor, we strive to redefine fashion by merging creativity with functionality, crafting garments that stand out through innovative design and meticulous attention to detail. Our collections embody a unique aesthetic, combining unexpected textures, colors, and shapes to offer a bold statement of individuality. Every piece is made with premium materials, ensuring both quality and comfort. Globally recognized for our forward-thinking approach, Kolor regularly features at prestigious fashion events like Paris Fashion Week. In addition to our artistry, we prioritize sustainability by adopting eco-friendly production methods, so our customers can enjoy fashion that’s both stylish and responsible.</p>
             <a href="#section1" class="learn-more">Back to top</a>
         </div>
     </div>
