--- a/SHOPM.html
+++ b/SHOPM.html
@@ -338,7 +338,7 @@
 
 <body style="margin:0px;padding:0px;width:100%;">
     <div id="header">
-        <h2><a href="KOLOR_WEBSITE.html">kolor</a></h2>
+        <h2><a href="index.html">kolor</a></h2>
         <i style='font-size:24px;color:#c9ab82;' class='fas' align="right" onclick="cartshow();">&#xf07a;</i>
     </div>
 
