--- a/ABOUT.html
+++ b/ABOUT.html
@@ -120,7 +120,7 @@
 </head>
 <body>
     <div id="header">
-        <h2><a href="KOLOR_WEBSITE.html">kolor</a></h2>
+        <h2><a href="index.html">kolor</a></h2>
     </div>
 
     <div class="content">
